[package]
name = "sacn"
description = "Rust sACN implementation."
version = "0.10.0"
readme = "README.md"
keywords = ["acn", "sacn", "dmx", "e131", "ansi"]
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>", "Paul Lancaster <paul@lancasterzone.com>", "Stewart Adam <s.adam@diffingo.com>"]
documentation = ""
repository = "https://github.com/stewartadam/sacn"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
byteorder = { version = "1.5.0", features = [] }
error-chain = "0.12.4"
heapless = { version = "0.8.0", optional = true }
libc = { version = "0.2.171" }
socket2 = { version = "0.5.9", features = ["all"] }
uuid = { version = "1.12", features = ["v4"] }

[features]
default = ["std"]
std = []
unstable = ["heapless"]

[badges]
travis-ci = { repository = "stewartadam/sacn" }
